crates/swc_ecma_react_compiler/tests/fixtures/upstream/fault-tolerance/error.try-finally-and-ref-access/error.txt
Found 2 errors:

Todo: (BuildHIR::lowerStatement) Handle TryStatement without a catch clause

error.try-finally-and-ref-access.ts:12:2
  10 |
  11 |   // Error: try/finally (Todo from BuildHIR)
> 12 |   try {
     |   ^^^^^
> 13 |     doSomething();
     | ^^^^^^^^^^^^^^^^^^
> 14 |   } finally {
     | ^^^^^^^^^^^^^^^^^^
> 15 |     cleanup();
     | ^^^^^^^^^^^^^^^^^^
> 16 |   }
     | ^^^^ (BuildHIR::lowerStatement) Handle TryStatement without a catch clause
  17 |
  18 |   // Error: reading ref during render
  19 |   const value = ref.current;

Error: Cannot access refs during render

React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef).

error.try-finally-and-ref-access.ts:19:16
  17 |
  18 |   // Error: reading ref during render
> 19 |   const value = ref.current;
     |                 ^^^^^^^^^^^ Cannot access ref value during render
  20 |
  21 |   return <div>{value}</div>;
  22 | }
